# udojun

./: CMakeLists.txt  README.md  compile_commands.json
Documentation/: json.org
include/: 3d.hpp  advanced_component.hpp  animation.hpp  bullet_management.hpp  character.hpp  effect.hpp  enemy_character.hpp  fonts.hpp  functor.hpp  game_component.hpp  game_system.hpp  geometry.hpp  gm.hpp  key_input.hpp  laser.hpp  macro.hpp  move_func.hpp  programable.hpp  rotate_func.hpp  sched.hpp  sound.hpp  textures.hpp  types.hpp  utility.hpp  value.hpp
json/: bottom.json  bullets_sched.json  compile_commands.json  delay_circle.json  delay_circle_loop.json  ellipe.json  empty_enemy_schedule.json  empty_schedule.json  field1.json  five_way.json  flower.json  flower_loop.json  fonts.json  game_config.json  hart.json  jiki.json  jiki2.json  junko1.json  junko_shot_slow_lv1.json  junko_shot_slow_lv2.json  junko_spell1.json  laser_sample.json  main.json  multi_shot.json  multi_shot2.json  normal_enemy_shot1.json  ringo.json  shot.json  shot2.json  sound.json  spell.json  spell_sub_jiki.json  stage1_enemy.json  textures.json  udon-tsujo-elem.json  udon_spell1.json  udon_spell2.json  udon_spell2_enemy_schedule.json  udon_spell2_impl.json  udon_spell3.json  (+6 more)
src/: 3d.cpp  advanced_component.cpp  builtin_enemy.cpp  bullet_management.cpp  character.cpp  component.cpp  credit_scene.cpp  danmaku_data_structure.cpp  dependent_util_function.cpp  effect.cpp  enemy_management.cpp  episode_scene.cpp  fonts.cpp  game_system.cpp  geometry.cpp  gm.cpp  keyboard.cpp  laser.cpp  macro.cpp  main.cpp  move_func.cpp  programable.cpp  ranking_scene.cpp  rotate.cpp  save_scene.cpp  scene.cpp  scene_animation.cpp  sched.cpp  sound.cpp  sub_scene.cpp  textures.cpp  title_scene.cpp
src/scene/: race.cpp
